admin_result_completely_fixed.log
  File "/home/runner/workspace/main.py", line 1213
    try:
    ^^^
SyntaxError: expected 'except' or 'finally' block
